--- a/Css/dashboard.css
+++ b/Css/dashboard.css
@@ -542,7 +542,7 @@ input[type=text]{
 	font-weight: bold;
 	font-family: Verdana;
 	left: 288px;
-	top: -145px;
+	top: -13px;
 	position: relative;
 	/*transform: scale(1.1,1.1);*/
 	opacity: .7;
@@ -970,7 +970,7 @@ table tr td:first-child{
 	transform: translate(-50%, 50%);
 	opacity: 1;
 }
-.jobposter a {
+.jobposter button {
 	left: 1100px;
 	position: fixed;
 	text-decoration: none;
@@ -978,6 +978,8 @@ table tr td:first-child{
 	font-family:bungee;
 	font-size: 11px;
 	width: 300px;
+	border: none;
+	background: transparent;
 }
 .design .jobtitlee{
 	margin:0;
@@ -1064,6 +1066,60 @@ table tr td:first-child{
 	color: white;
 	font-size: 18px;
 	font-family: verdana;
-	padding: 10px 368px;}
+	padding: 10px 368px;
+}
 
-#update
+.switch{
+	top: 130px;
+	position: relative;
+	left: 660px;
+	padding: 0.7em 1.4em;
+	margin: 0 0.3em 0.3em 0;
+	border-radius: 0.15em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: verdana;
+	font-weight: bold;
+	color: #C19434;
+	/*box-shadow: inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);*/
+	position: relative;
+	border: none;
+	font-size: 15px;
+	transform: scale(.9,.9);
+	/*float: left;*/
+}
+#jobbutton{
+	background: #34421E;
+}
+#interntable{
+	display: none;
+}
+/*close image of all pop ups on the websites*/
+
+.closeimg{
+	width: 30px;
+	height: 30px;
+}
+.close1{
+	left: 560px;
+	top: -65px;
+	position: absolute;
+}
+.close2{
+	left: 285px;
+	top: -5px;
+	position: absolute;
+	width: 20px;
+	height: 20px;
+}
+.close3{
+	left: 285px;
+	top: -5px;
+	position: absolute;
+	width: 20px;
+	height: 20px;
+}
+.hideit{
+	display: none;s
+}
+
