--- a/Css/register.css
+++ b/Css/register.css
@@ -1,9 +1,13 @@
 
 body{
 	margin: 0;
+	transform: scale(1.3,1.3);
+	top: -120px;
+	left: -610px;
+	position: absolute;
 }
 .rectangle{
-	background: #C19434;
+	background: #4a161a;
 	width: 580px;
 	height: 665px;
 }
@@ -17,10 +21,10 @@ body{
 }
 .rectangle p a{
 	text-decoration: none;
-	color: #34421E;
+	color: #4a161a;
 }
 .progressline{
-	background-color: #C19434;
+	background-color: #4a161a;
 	width: 200px;
 	height: 3px;
 	left:700px;
@@ -33,8 +37,9 @@ body{
 	letter-spacing: 2px;
 	left:870px;
 	top: 160px;
+	width: 270px;
 	position: absolute;
-	border-bottom: 2px solid #C19434;
+	border-bottom: 2px solid #4a161a;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
@@ -42,10 +47,11 @@ body{
 	font-family: verdana;
 	font-size: 30px;
 	letter-spacing: 2px;
-	left:860px;
-	top: 120px;
+	left:850px;
+	top: 80px;
+	width: 310px;
 	position: absolute;
-	border-bottom: 2px solid #C19434;
+	border-bottom: 2px solid #4a161a;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
@@ -53,10 +59,11 @@ body{
 	font-family: verdana;
 	font-size: 30px;
 	letter-spacing: 2px;
-	left:840px;
+	left:820px;
 	top: 120px;
+	width: 320px;
 	position: absolute;
-	border-bottom: 2px solid #C19434;
+	border-bottom: 2px solid #4a161a;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
@@ -66,8 +73,9 @@ body{
 	letter-spacing: 2px;
 	left:820px;
 	top: 160px;
+	width: 350px;
 	position: absolute;
-	border-bottom: 2px solid #C19434;
+	border-bottom: 2px solid #4a161a;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
 }
@@ -77,7 +85,7 @@ body{
 	position: absolute;
 }
 #step2form{
-	top: 220px;
+	top: 150px;
 	left: 840px;
 	position: absolute;
 }
@@ -118,6 +126,15 @@ input[type=text]{
 	font-family:verdana;
 	font-size: 13px; 
 }
+select{
+	border: none;
+	border-radius: 5px;
+	background-color: #F1F1EF;
+	width: 330px;
+	height: 40px;
+	font-family:verdana;
+	font-size: 13px; 
+}
 input[type=Month]{
 	border: none;
 	border-radius: 5px;
@@ -138,30 +155,47 @@ input[type=file]{
 }
 label{
 	font-family:verdana;
-	font-size: 13px; 
+	font-size: 10px; 
 	font-weight: bold;
 }
+label span{
+	color: red;
+}
 .next{
+	display: inline-block;
+	padding: 0.7em 1.4em;
+	margin: 0 0.3em 0.3em 0;
+	border-radius: 0.15em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: verdana;
+	font-size: 14px;
+	color: #ffffff;
+	background-color:#4a161a;
 	border: none;
-	background-color:#34421E ;
-	font-family:verdana;
-	font-size: 18px;
 	top: 450px;
 	left:1098px;
 	position: absolute;
 }
 .nextcompany{
+	display: inline-block;
+	padding: 0.7em 1.4em;
+	margin: 0 0.3em 0.3em 0;
+	border-radius: 0.15em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: verdana;
+	font-size: 14px;
+	color: #ffffff;
+	background-color:#4a161a;
 	border: none;
-	background-color:#34421E ;
-	font-family:verdana;
-	font-size: 18px;
 	top: 150px;
-	left:960px;
+	left:950px;
 	position: absolute;
 }
 .finish{
-	top:350px;
-	left:1060px;
+	top:340px;
+	left:1070px;
 	position: absolute;
 }
 #next1{
@@ -169,14 +203,14 @@ label{
 }
 #next2{
 	display: none;
-	top: 520px;
+	top: 515px;
 	position: absolute;
 	
 }
 #back1{
 	display: none;
-	top:520px;
-	left: 850px;
+	top:515px;
+	left: 840px;
 	position: absolute;
 }
 #back2{
@@ -190,8 +224,8 @@ label{
 }
 .back2{
 	display: none;
-	top: -314px;
-	left: 860px;
+	top: 340px;
+	left: 840px;
 	position: relative;
 }
 #next2company{
@@ -202,14 +236,14 @@ label{
 }
 #back1company{
 	display: none;
-	left: 840px;
+	left: 820px;
 	top: 470px;
 	position: absolute;
 }
 #back2company{
 	display: none;
-	top: 350px;
-	left: 860px;
+	top: 340px;
+	left: 840px;
 	position: absolute;
 }
 
@@ -218,6 +252,7 @@ label{
 }
 #Step2{
 	display: none;
+	
 }
 #Step2company{
 	display: none;
@@ -234,4 +269,30 @@ label{
 	top: -160px;
 	left: 40px;
 	position: absolute;
+}
+.alternatives{
+	font-family: verdana;
+	font-size: 12px;
+	width: 300px;
+	top: 550px;
+	left:871px;
+	position: absolute;
+
+}
+.alternatives2{
+	font-family: verdana;
+	font-size: 12px;
+	width: 300px;
+	top: 525px;
+	left:860px;
+	position: absolute;
+	
+}
+.alternatives2 a{
+	color: #4a161a;
+	font-weight: bold;
+}
+.alternatives a{
+	color: #4a161a;
+	font-weight: bold;
 }
