--- a/Css/style.css
+++ b/Css/style.css
@@ -1,55 +1,87 @@
 body{
 	margin: 0;
+	overflow-x: hidden;
 }
-.rectangle{
-	background: #34421E;
-	width: 580px;
+.rectanglevideo{
+	background: #f1f1f1;
+	width: 750px;
 	height: 665px;
+	position: fixed;
 }
-.rectangle p{
-	margin: 0;
-	font-size: 22px;
+
+
+.button-container{
+	/*width: 850px;*/
+	height: 200px;
+	top: 255px;
+	left: 795px;
+	position: absolute;
+
+}
+.button-container .btn{
+	padding: 0.7em 1.4em;
+	display: inline-block;
+	border-radius: 0.15em;
+	box-sizing: border-box;
+	text-decoration: none;
 	font-family: verdana;
-	top: 50%;
-	left: 50%;
+	font-size: 15px;
+	color:white;
+	background-color:#4a161a;
+	border: none;
+	margin-left: 50px;
+	margin-top: 30px;
+}
+.button-container .trainerbtn{
+	left: 135px;
 	position: relative;
 }
-.rectangle p a{
-	text-decoration: none;
-	color: #C19434;
+.button-container .btn:hover{
+	color: #4a161a;
+	background: #f1f1f1;
 }
-.btn{
-	float: left;
-	margin-left: 425px;
-	margin-top: 220px;
-	border:none;
-	font-size: 25px;
+.rectanglevideo .motto{
 	font-family: verdana;
-	background-color: #C19434;
-	width: 300px;
-	height: 50px;
-	cursor: context-menu;
-}
-.btn:hover{
-	background-color: #F1F1EF;
-	color: #C19434;
-}
-.btn1{
-	left:200px;
-	top: 100px;
+	font-size: 40px;
+	width: 400px;
+	text-align: center;
+	font-weight: bolder;
+	margin: 0;
+	margin-right: -50%;
+	transform: translate(-50%,50%);
+	left: 50%;
+	top: 70px;
 	position: absolute;
+
 }
-.btn2{
-	left:600px;
-	top: 100px;
+ .rectanglevideo iframe{
+	margin: 0;
+	margin-right: -50%;
+	transform: translate(-50%,50%);
+	left: 50%;
+	top: 70px;
 	position: absolute;
+
 }
+
 
 /*Styling for forms to login for both employer and those seeking jobs*/
 #loginform{
-	top:260px;
-	left: 850px;
+	margin: 0;
+	margin-right: -50%;
+	transform: translate(-50%,50%);
+	top:250px;
+	left: 40%;
 	position: absolute;
+	transform: scale(1.3,1.3);
+}
+label{
+	font-family:verdana;
+	font-size: 10px; 
+	font-weight: bold;
+}
+label span{
+	color: red;
 }
 input[type=email]{
 	border: none;
@@ -70,18 +102,56 @@ input[type=password]{
 	font-size: 13px; 
 }
 input[type=submit]{
+	display: inline-block;
+	padding: 0.7em 1.4em;
+	margin: 0 0.3em 0.3em 0;
+	border-radius: 0.15em;
+	box-sizing: border-box;
+	text-decoration: none;
+	font-family: verdana;
+	font-size: 14px;
+	color: #ffffff;
+	background-color:#4a161a;
 	border: none;
-	background-color:#C19434 ;
-	font-family:verdana;
-	font-size: 18px;
-	margin-left: 120px;
+	margin-right: -50%;
+	transform: translate(-50%,50%);
+	left: 50%;
+	position: absolute;
 }
 input[type=submit]:hover{
-	background-color: #34421E;
+	background-color: black;
+	color: #4a161a;
+}
+.alternative{
+	font-family: verdana;
+	margin: 0;
+	margin-right: -50%;
+	transform: translate(-50%,50%);
+	top: 130px;
+	left: 50%;
+	position: absolute;
+}
+.alternative a{
+   font-weight: bold;
+   color: #4a161a;
+}
+.actiontitle{
+	font-family: verdana;
+	font-size: 30px;
+	letter-spacing: 2px;
+	margin: 0;
+	margin-right: -50%;
+	transform: translate(-50%,50%);
+	top: 60px;
+	left: 50%;
+	position: absolute;
+	border-bottom: 2px solid #4a161a;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
 .error{
 	font-family: verdana;
-	font-size: 13px;
+	font-size: 8px;
 	font-weight: bold;
 	color: red;
 	opacity: .7;
