--- a/Css/dashboard.css
+++ b/Css/dashboard.css
@@ -393,16 +393,17 @@ input[type=text]{
 
  .resource{
  	width: 300px ;
- 	height: 250px;
+ 	height: 255px;
  	background: white;
  	top: 395px;
  	left: 260px;
  	position: relative;
- }
- .career{
  	float: left;
  	margin-left: 50px;
-    margin-top: -230px;
+    margin-top: -250px;
+ }
+ .career{
+ 	
  }
  .resourceimg{
  	top: 55px;
@@ -479,7 +480,7 @@ input[type=text]{
  	position: absolute;
  }
  .slides{
- 	/*display: none;*/
+ 	display: none;
  }
  .activeslide, .dot:hover {
   background-color: #717171;
