--- a/Css/welcome.css
+++ b/Css/welcome.css
@@ -1,10 +1,9 @@
 body{
-	background-color: #34421E;
+	background-color: white;
 }
 .welcomemsg{
 	font-family: verdana;
 	font-size: 20px;
-	color: white;
 	text-overflow: clip;
 	letter-spacing: 2px;
 	text-align: center;
@@ -14,31 +13,38 @@ body{
 	position: absolute;
 }
 .profilepp{
-	width: 70px;
 	height: 70px;
 	border-radius: 10px;
 	top:130px;
-	left: 630px;
+	left: 610px;
 	position: absolute;
 }
 .name{
 	left:610px;
 	top:190px;
 	position: absolute;
-	color: #C19434;
+	color: #4a161a;
 	font-family: verdana;
 	font-size: 25px;
 	font-weight: bold;
 }
 .btn{
-	float: left;
-	margin-left: 510px;
-	margin-top: 520px;
-	border:none;
-	font-size: 25px;
-	font-family: verdana;
-	background-color: #C19434;
-	width: 300px;
-	height: 50px;
-	cursor: context-menu;
+    display: inline-block;
+    padding: 0.7em 1.4em;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.15em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: verdana;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #4a161a;
+    border: none;
+    margin-right: -50%;
+    transform: translate(-50%, 50%);
+    left: 50%;
+    top: 450px;
+    position: absolute;
+}
+
 }
