--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -258,6 +258,7 @@ table th {
 
 #onlineusers{
 	display: none;
+	width: 1100px;
 }
 #onlineusers h1{
    font-family: verdana;
@@ -269,14 +270,15 @@ table th {
 }
 
 .profile{
-	top: 150px;
-	left: 300px;
+	top: 120px;
+	left: 270px;
 	/*position: absolute;*/
 	background-color:#000000;
 	width: 150px;
 	height: 150px;
 	box-shadow: 3px 3px 10px 2px #000000;
-	margin-left: 30px;
+	margin-left: 50px;
+	margin-top: 30px;
 	float: left;
 	position: relative;
 }
@@ -575,4 +577,74 @@ table th {
 }
 .userbox .remove{
 	background: red;
+}
+
+#call{
+	width: 300px;
+    height: 60px;
+    background-color: #4a161a;
+    border-radius: 5px;
+    top: 320px;
+    left: 530px;
+    position: fixed;
+    z-index: 1;
+    -moz-box-shadow :  3px 3px 10px 0 #000000;
+    -webkit-box-shadow :  3px 3px 10px 0 #000000;
+    box-shadow :  3px 3px 10px 2px #000000;
+    display: none;
+}
+#email{
+	width: 300px;
+    height: 60px;
+    background-color: #4a161a;
+    border-radius: 5px;
+    top: 320px;
+    left: 530px;
+    position: fixed;
+    z-index: 1;
+    -moz-box-shadow :  3px 3px 10px 0 #000000;
+    -webkit-box-shadow :  3px 3px 10px 0 #000000;
+    box-shadow :  3px 3px 10px 2px #000000;
+    display: none;
+}
+.closeimg{
+	width: 20px;
+	height: 20px;
+}
+.close1{
+	left: 280px;
+	top: -5px;
+	position: absolute;
+}
+.number{
+	margin: 0;
+	margin-right: -50%;
+ 	transform: translate(-50%,-50%);
+ 	left: 50%;
+ 	top: 50%;
+ 	position: absolute;
+ 	font-family: verdana;
+ 	font-size: 20px;
+ 	color: white;
+}
+.Interests li{
+	margin-top: 20px;
+	top: 70px;
+	left: 10px;
+	font-size: 20px;
+	list-style-type:square;
+	position: relative;
+	font-family: verdana;
+}
+
+#jobsection{
+	top: 200px;
+	left: 200px;
+	position: relative;
+}
+
+#tablejobs{
+	border-collapse: collapse;
+	left: 350px;
+	position: absolute;
 }
