--- a/Css/dashboard.css
+++ b/Css/dashboard.css
@@ -133,8 +133,6 @@ body{
 	list-style-type:square;
 	position: relative;
 	font-family: verdana;
-	color: #4a161a;
-
 }
 input[type=text]{
 	top:7px;
@@ -278,7 +276,7 @@ input[type=text]{
  }
  .jobdeadline{
  	font-family: verdana;
- 	font-size: 11px;
+ 	font-size: 10px;
  	color: #808080;
  	top: 220px;
  	left: 10px;
@@ -355,7 +353,7 @@ input[type=text]{
  }
  .internshipdeadline{
  	font-family: verdana;
- 	font-size: 11px;
+ 	font-size: 10px;
  	color: #808080;
  	top: 220px;
  	left: 10px;
@@ -400,11 +398,18 @@ input[type=text]{
  	position: relative;
  	float: left;
  	margin-left: 50px;
-    margin-top: -250px;
+    margin-top: -254px;
  }
- .career{
- 	
+ #slides1{
+ 	display: block;
  }
+ #slides2{
+ 	display: none;
+ }
+ #slides3{
+ 	display: none;
+ }
+
  .resourceimg{
  	top: 55px;
  	position: absolute;
@@ -479,9 +484,6 @@ input[type=text]{
  	left: 770px;
  	position: absolute;
  }
- .slides{
- 	display: none;
- }
  .activeslide, .dot:hover {
   background-color: #717171;
 }
@@ -541,14 +543,15 @@ input[type=text]{
      height:15px;
      left: -12px;
      top: 2px;
-     position: relative;
+     left: 22px;
+     position: absolute;
  }
 .edit3{
 	font-weight: bold;
 	font-family: Verdana;
 	left: 315px;
-	top: -145px;
-	position: relative;
+	top: -13px;
+	position: absolute;
 	/*transform: scale(1.1,1.1);*/
 	opacity: .7;
 }
@@ -673,7 +676,7 @@ input[type=text]{
 .editarea label{
 	font-family: verdana;
 	font-size: 15px;
-	color: #000000;
+	color: #ffffff;
 	top: 25px;
 	left: 100px;
 	position: relative;
@@ -915,6 +918,9 @@ input[type=text]{
 #profileedit{
 	display: none;
 }
+#documentupload{
+	display: none;
+}
 #accountsettings{
 	display: none;
 }
@@ -1104,7 +1110,7 @@ table tr td:first-child{
 	text-decoration: none;
 	font-family: verdana;
 	font-weight: bold;
-	color: white;
+	color: black;
 	/*box-shadow: inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);*/
 	position: relative;
 	border: none;
@@ -1145,5 +1151,16 @@ table tr td:first-child{
 }
 .hideit{
 	display: none;s
+}
+.viewresume{
+	margin:0;
+	position: absolute;
+	left: 50%;
+	top:50%;
+	margin-right: -50%;
+	transform: translate(-50%,-50%);
+	font-family: verdana;
+	font-size: 20px;
+	color: black;
 }
 
