--- a/Css/dashboardcompany.css
+++ b/Css/dashboardcompany.css
@@ -306,7 +306,7 @@ body{
 	font-weight: bold;
 	font-family: Verdana;
 	left: 288px;
-	top: -145px;
+	top: -14px;
 	position: relative;
 	/*transform: scale(1.1,1.1);*/
 	opacity: .7;
@@ -397,7 +397,7 @@ body{
 .editarea label{
 	font-family: verdana;
 	font-size: 15px;
-	color: #4a161a;
+	color: white;
 	top: 25px;
 	left: 100px;
 	position: relative;
@@ -745,7 +745,7 @@ table th {
 .postajob label{
 	font-family: verdana;
 	font-size: 15px;
-	color: #4a161a;
+	color: white;
 }
 .postajob .label1{
 	margin:0;
@@ -854,7 +854,7 @@ table th {
 	left: 360px;
 	top: 100px;
 	position: absolute;
-	background-color: white;
+	background-color: black;
 	width: 700px;
 	height: 550px;
 
@@ -880,6 +880,7 @@ table th {
 .updateajob label{
 	font-family: verdana;
 	font-size: 15px;
+	color: white;
 }
 .updateajob .label1{
 	margin:0;
@@ -989,7 +990,6 @@ table th {
 	font-family: verdana;
 	color: #ffffff;
 	background-color:red;
-	/*box-shadow: inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);*/
 	position: relative;
 	border: none;
 	font-size: 15px;
